Added profile pic and content

--- a/src/htmls/profile-pic.html
+++ b/src/htmls/profile-pic.html
@@ -1,3 +1,8 @@
+
+
 <div>
-	Wanted!
+	My profile picture
+	<div class="profile-pic">
+			<img src="img/seep.png" alt="A girl sitting with coffee in her hand.">
 </div>
+
