--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,11 @@
 </head>
 <body>
 <div id="container">
-	<div id="cover">
-		<div id="profile-pic" w3-include-html="htmls/profile-pic.html">
-
+	<div id="cover"> 
+			<div id="logo" w3-include-html="htmls/logo.html"></div>
+			<div id="profile-pic" w3-include-html="htmls/profile-pic.html"></div>
 		</div>
-		<div id="logo" w3-include-html="htmls/logo.html">
-
-		</div>
-	</div>
+</div>
 
 	<div id="text-container">
 		<div id="about-container" w3-include-html="htmls/about.html"></div>
