--- a/src/htmls/logo.html
+++ b/src/htmls/logo.html
@@ -1,6 +1,6 @@
+
 <div>
-	Char logo kya kahenge
 	<div class="logo">
-			<img src="img/sglogo.png" alt="Square logo">
+			<img src="img/sglogo.png" alt="Square logo with letters and a dot">
 		</div>
 </div>
