--- a/src/htmls/contact.html
+++ b/src/htmls/contact.html
@@ -1,4 +1,5 @@
+
 <div>
-	Contact Icons - Linkedin, Github, Phone, Email
+	Contact Icons - Linkedin, Github, Phone
 	<a href="javascript:void(0);" onclick="ToggleView('Email')">Email</a>
 </div>
