--- a/src/htmls/email-container.html
+++ b/src/htmls/email-container.html
@@ -1,7 +1,10 @@
 
 
 <form action="https://formspree.io/seepgulati@gmail.com" method="POST">
-  <input type="text" name="name">
-  <input type="email" name="_replyto">
-  <input type="submit" value="Send">
+  <input type="text" name="name"placeholder="Name" >
+  <br><br>
+  <input type="email" name="_replyto"placeholder="Email">
+  <br><br>
+  <input type="submit" value="Send"placeholder="Submit">
 </form>
+
