--- a/src/htmls/about.html
+++ b/src/htmls/about.html
@@ -1,8 +1,7 @@
-<div>
-
-	<h1 style="border:2px solid #41D6BF;">Junior Developer in making</h1>
+	<h1>Junior Developer in making</h1>
 
 	 <h2> &lt;PR&gt; to &lt; &sol;DEV&gt;</h2>
+	 <div id="text">
 		 <p>
 			Hi, I am <strong>Seep Gulati</strong>. After several years of promoting companies as a <em>Public Relations professional</em>, I decided to change my path and get into something even more exciting.<br>I’m currently learning and exploring ’Coding’ at Coder Academy.</p>
 			
@@ -30,5 +29,4 @@
 				 <b>Q. What’s important about you that isn’t on your resume?</b>  <br>
 				 Growth mindset: I can genuinely say, whatever I have accomplished in life is due to having a mindset that our potential is infinite. We can achieve anything with hard work and sincere effort. <i>"Harder, we work, the luckier we get."</i>
 				</p>
-
-	</div>
+			</div>
