--- a/src/htmls/contact.html
+++ b/src/htmls/contact.html
@@ -1,5 +1,22 @@
+<h1>Contact</h1>
+<h2></h2>
+<div id="contact">
+	<a href="https://github.com/SeepG/Portfolio" target="_blank">
+			<i class="fab fa-github fa-4x"></i>
+	</a>
+	
+	<a href="https://www.linkedin.com/in/seepgulati" target="_blank">
+		  <i class="fab fa-linkedin-in fa-4x"></i>
+	</a>
 
-<div>
-	Contact Icons - Linkedin, Github, Phone
-	<a href="javascript:void(0);" onclick="ToggleView('Email')">Email</a>
+	<a href="tel:+61 0423610479"> 
+			<i class="fas fa-phone-square fa-4x"></i> 
+	</a>
+
+	<a href="https://twitter.com/seepgulati" target="_blank">
+	<i class="fab fa-twitter fa-4x"></i>
+	</a>
+
+		<a href="javascript:void(0);" onclick="ToggleView('Email')">Email</a>
 </div>
+
