--- a/src/htmls/email-container.html
+++ b/src/htmls/email-container.html
@@ -1,10 +1,13 @@
 
+<h1>Email me</h1>
 
+<div id="email">
 <form action="https://formspree.io/seepgulati@gmail.com" method="POST">
-  <input type="text" name="name"placeholder="Name" >
+  <textarea type="text" name="message"placeholder="Your message" ></textarea>
   <br><br>
-  <input type="email" name="_replyto"placeholder="Email">
+  <input type="email" name="_replyto"placeholder="Email" />
   <br><br>
   <input type="submit" value="Send"placeholder="Submit">
 </form>
+</div>
 
