--- a/src/htmls/skills.html
+++ b/src/htmls/skills.html
@@ -1,3 +1,11 @@
-<div>
-Ruby, CSS, HTML5
+<h1>Skills</h1>
+<h2></h2>
+<div id="text">
+	<p> I have started my coding journey with Ruby, HTML, CSS and more cool technologies to follow. <nbsp></nbsp>
+		Recently, I got my first taste of pair programming for making a ruby application which ran on terminal. 
+	</p>
+		<a href="https://www.ruby-lang.org/en/"><img class="skills-icon" src="..//src/img/ruby.ico"/></a>
+		<i class="fab fa-html5 fa-5x"></i>
+		<i class="fab fa-css3-alt fa-5x"></i>
 </div>
+
