--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title> Personal Portfolio </title>
+	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
 	<link rel ="stylesheet" type="text/css" media="screen"href="styles/index.css">
 	<script src="scripts/w3-include.js" type="text/javascript"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -17,7 +19,7 @@
 				<img id="profile-pic" src="..//src/img/seep.png"/>
 			</div> 
 
-		<div id="text-container">
+		<div id="text-container" class="text-container">
 			<div id="about-container" w3-include-html="htmls/about.html"></div>
 			<div id="skills-container" w3-include-html="htmls/skills.html"></div>
 			<div id="contact-container" w3-include-html="htmls/contact.html"></div>
