updated logo, icon text
Added animation on logo, text to contact icons

--- a/src/htmls/contact.html
+++ b/src/htmls/contact.html
@@ -1,22 +1,25 @@
 <h1>Contact</h1>
-<h2></h2>
+<h2>You can reach me on any of these channels.</h2>
+
 <div id="contact">
-	<a href="https://github.com/SeepG/Portfolio" target="_blank">
+	<a href="https://github.com/SeepG/Portfolio" target="_blank"> Github
 			<i class="fab fa-github fa-4x"></i>
 	</a>
 	
-	<a href="https://www.linkedin.com/in/seepgulati" target="_blank">
+	<a href="https://www.linkedin.com/in/seepgulati" target="_blank"> Linkedin
 		  <i class="fab fa-linkedin-in fa-4x"></i>
 	</a>
 
-	<a href="tel:+61 0423610479"> 
+	<a href="tel:+61 0423610479"> Telephone
 			<i class="fas fa-phone-square fa-4x"></i> 
 	</a>
 
-	<a href="https://twitter.com/seepgulati" target="_blank">
-	<i class="fab fa-twitter fa-4x"></i>
+	<a href="https://twitter.com/seepgulati" target="_blank">Twitter
+	    <i class="fab fa-twitter fa-4x"></i>
 	</a>
 
-		<a href="javascript:void(0);" onclick="ToggleView('Email')">Email</a>
+	<a href="javascript:void(0);" onclick="ToggleView('Email')">Email
+		  <i class="fas fa-envelope-square fa-4x"></i>
+	</a>
 </div>
 
