--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title> Personal Portfolio </title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
 	<link rel ="stylesheet" type="text/css" media="screen"href="styles/index.css">
@@ -15,9 +16,9 @@
 <body>
 <div id="container"> 
 			<div id="cover" class="flex-cover-container">
-				<img id="logo" src="..//src/img/sglogo.png"/>
-				<img id="profile-pic" src="..//src/img/seep.png"/>
-			</div> 
+				   <img id="logo" src="..//src/img/sglogo.png"/>
+				   <img id="profile-pic" src="..//src/img/seep.png"/>
+</div> 
 
 		<div id="text-container" class="text-container">
 			<div id="about-container" w3-include-html="htmls/about.html"></div>
