--- a/src/htmls/skills.html
+++ b/src/htmls/skills.html
@@ -4,8 +4,19 @@
 	<p> I have started my coding journey with Ruby, HTML, CSS and more cool technologies to follow. <nbsp></nbsp>
 		Recently, I got my first taste of pair programming for making a ruby application which ran on terminal. 
 	</p>
-		<a href="https://www.ruby-lang.org/en/"><img class="skills-icon" src="..//src/img/ruby.ico"/></a>
-		<i class="fab fa-html5 fa-5x"></i>
-		<i class="fab fa-css3-alt fa-5x"></i>
-</div>
 
+	<br> 	<br>
+		<a href="https://www.ruby-lang.org/en/" target="_blank"> Ruby
+			<img class="skills-icon" src="..//src/img/ruby.ico"/></a>
+
+		<nbsp></nbsp> 
+		<nbsp></nbsp>
+
+		<a href="https://www.w3schools.com/html/" target="_blank"> HTML5
+			<i class="fab fa-html5 fa-5x"></i></a>
+			
+			<nbsp></nbsp>
+
+		<a href="https://www.w3schools.com/css/" target="_blank"> CSS3
+			<i class="fab fa-css3-alt fa-5x"></i></a>
+</div>
