final-site-with-animation

--- a/src/index.html
+++ b/src/index.html
@@ -26,22 +26,13 @@
 			<div id="email-container" w3-include-html="htmls/email-container.html"></div>
 		</div>
 
-		<div id="navigation" class="flex-nav-container">
-			<a href="javascript:void(0);" onclick="ToggleView('About')" >About</a>
+		<div id="navigation" class="flex-nav-container link">
+			<a href="javascript:void(0);" onclick="ToggleView('About')">About</a>
 			<a href="javascript:void(0);" onclick="ToggleView('Skills')">Skills</a>
 			<a href="javascript:void(0);" onclick="ToggleView('Contact')">Contact</a>
 		</div>
 </div>
-		
-<!-- <div class="navbar">
-			<div class="navbar-logo">
-				<h3 class="logo"><i class="fab fa-affiliatetheme"></i></h3>
-			</div>
-			<div class="navbar-links">
-				<a href="" class="navbar-links">About</a>
-				<a href="" class="navbar-links">Projects</a>
-				<a href="" class="navbar-links">Contact</a>
-			</div> -->
+
 <script>
 		includeHTML();
 		ToggleView('About');
