--- a/src/htmls/email-container.html
+++ b/src/htmls/email-container.html
@@ -1,13 +1,20 @@
 
-<h1>Email me</h1>
+<h1>Send me an email</h1>
 
 <div id="email">
 <form action="https://formspree.io/seepgulati@gmail.com" method="POST">
-  <textarea type="text" name="message"placeholder="Your message" ></textarea>
-  <br><br>
-  <input type="email" name="_replyto"placeholder="Email" />
-  <br><br>
-  <input type="submit" value="Send"placeholder="Submit">
-</form>
-</div>
 
+  <input type="email" name="name"placeholder="Your name"/>
+  <br>
+
+  <textarea type="text" name="message" rows="10" cols="30" placeholder="Your message"></textarea>
+  <br>
+
+  <input type="email" name="_replyto"placeholder="Email"/>
+  <br>
+
+  <input type="submit" value="Send"placeholder="Submit">
+
+</form>
+
+</div>
