--- a/src/htmls/contact.html
+++ b/src/htmls/contact.html
@@ -3,23 +3,28 @@
 <h2>You can reach me on any of these channels.</h2>
 
 <div id="contact">
-	<a href="https://github.com/SeepG/Portfolio" target="_blank"> Github
+	<a href="https://github.com/SeepG/Portfolio" target="_blank"> 
 		<i class="fab fa-github fa-4x"></i>
+		<p class="icon-text">Github</p>
 	</a>
 
-	<a href="https://www.linkedin.com/in/seepgulati" target="_blank"> Linkedin
+	<a href="https://www.linkedin.com/in/seepgulati" target="_blank"> 
 		<i class="fab fa-linkedin-in fa-4x"></i>
+		<p class="icon-text">Linkedin</p>
 	</a>
 
-	<a href="tel:+61 0423610479"> Telephone
+	<a href="tel:+61 0423610479">
 		<i class="fas fa-phone-square fa-4x"></i>
+		<p class="icon-text">Phone</p>
 	</a>
 
-	<a href="https://twitter.com/seepgulati" target="_blank">Twitter
+	<a href="https://twitter.com/seepgulati" target="_blank">
 		<i class="fab fa-twitter fa-4x"></i>
+		<p class="icon-text">Twitter</p>
 	</a>
 
-	<a href="javascript:void(0);" onclick="ToggleView('Email')">Email
+	<a href="javascript:void(0);" onclick="ToggleView('Email')">
 		<i class="fas fa-envelope-square fa-4x"></i>
+		<p class="icon-text">Email</p>
 	</a>
 </div>
