--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title> Personal Portfolio </title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
@@ -13,11 +13,11 @@
 	<script src="scripts/app.js" type="text/javascript"></script>
 </head>
 <body>
-<div id="container"> 
+<div id="root-container"> 
 			<div id="cover" class="flex-cover-container">
 				   <img id="logo" src="..//src/img/sglogo.png"/>
 				   <img id="profile-pic" src="..//src/img/seep.png"/>
-</div> 
+			</div> 
 
 		<div id="text-container" class="text-container">
 			<div id="about-container" w3-include-html="htmls/about.html"></div>
