fixed img src issue

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
 <body>
 <div id="root-container"> 
 			<div id="cover" class="flex-cover-container">
-				   <img id="logo" src="..//src/img/sglogo.png"/>
-				   <img id="profile-pic" src="..//src/img/seep.png"/>
+				   <img id="logo" src="..//img/sglogo.png"/>
+				   <img id="profile-pic" src="..//img/seep.png"/>
 			</div> 
 
 		<div id="text-container" class="text-container">
