final version so far @3.20 pm-23 march
+screenshots update

--- a/src/htmls/email-container.html
+++ b/src/htmls/email-container.html
@@ -1,5 +1,5 @@
 
-<h1>Send me an email</h1>
+<h1>Send me email.</h1>
 
 <div id="email">
 <form action="https://formspree.io/seepgulati@gmail.com" method="POST">
