--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 	<title> Personal Portfolio </title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
-	<link rel ="stylesheet" type="text/css" media="screen"href="styles/index.css">
+	<link rel ="stylesheet" type="text/css" media="screen" href="styles/index.css">
 	<script src="scripts/w3-include.js" type="text/javascript"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="scripts/app.js" type="text/javascript"></script>
@@ -15,8 +15,8 @@
 <body>
 <div id="root-container"> 
 			<div id="cover" class="flex-cover-container">
-				   <img id="logo" src="..//img/sglogo.png"/>
-				   <img id="profile-pic" src="..//img/seep.png"/>
+				   <img id="logo" src="..//src/img/sglogo.png"/>
+				   <img id="profile-pic" src="..//src/img/seep.png"/>
 			</div> 
 
 		<div id="text-container" class="text-container">
