--- a/src/htmls/skills.html
+++ b/src/htmls/skills.html
@@ -7,7 +7,7 @@
 	<div class="icon-container">
 		<div>
 			<a href="https://www.ruby-lang.org/en/" target="_blank"> 
-				<img class="skills-icon" src="..//img/ruby.ico"/>
+				<img class="skills-icon" src="..//src/img/ruby.ico"/>
 				<p class="icon-text">Ruby</p>
 			</a>
 		</div>
