--- a/src/htmls/about.html
+++ b/src/htmls/about.html
@@ -1,6 +1,6 @@
 <h1> Seep Gulati </h1>
 
-<h2>Junior Developer in making
+<h2>Junior Developer in the making.
 	<br>
 	&lt;PR&gt; to&lt;&sol;DEV&gt;</h2>
 <div id="text">
