--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="scripts/app.js" type="text/javascript"></script>
 </head>
-<body>
-<div id="root-container"> 
+<body class="body-preventscroll">
+<div id="root-container">
+	<div class="content-scroll"> 
 			<div id="cover" class="flex-cover-container">
 				   <img id="logo" src="..//src/img/sglogo.png"/>
 				   <img id="profile-pic" src="..//src/img/seep.png"/>
@@ -25,7 +26,7 @@
 			<div id="contact-container" w3-include-html="htmls/contact.html"></div>
 			<div id="email-container" w3-include-html="htmls/email-container.html"></div>
 		</div>
-
+	</div>
 		<div id="navigation" class="flex-nav-container link">
 			<a href="javascript:void(0);" onclick="ToggleView('About')">About</a>
 			<a href="javascript:void(0);" onclick="ToggleView('Skills')">Skills</a>
