changed github link

--- a/src/htmls/contact.html
+++ b/src/htmls/contact.html
@@ -3,7 +3,7 @@
 <h2>You can reach me on any of these channels.</h2>
 
 <div id="contact">
-	<a href="https://github.com/SeepG/Portfolio" target="_blank"> 
+	<a href="https://github.com/SeepG" target="_blank"> 
 		<i class="fab fa-github fa-4x"></i>
 		<p class="icon-text">Github</p>
 	</a>
