email spelling change and profile pic for desktop

--- a/src/htmls/email-container.html
+++ b/src/htmls/email-container.html
@@ -1,5 +1,5 @@
 
-<h1>Send me email.</h1>
+<h1>Send me an email.</h1>
 
 <div id="email">
 <form action="https://formspree.io/seepgulati@gmail.com" method="POST" class="email-form">
@@ -8,7 +8,7 @@
 
   <textarea type="text" name="message" rows="10" cols="30" maxlength="3000" class="email-form-input" placeholder="Your message"></textarea>
 
-  <input type="email" class="email-form-input" name="_replyto"placeholder="Email"/>
+  <input type="email" class="email-form-input" name="_replyto"placeholder="Your Email"/>
 
   <input type="submit" value="Send"placeholder="Submit" class="email-submit-button"/>
 
