--- a/src/htmls/skills.html
+++ b/src/htmls/skills.html
@@ -1,14 +1,13 @@
 <h1>Skills</h1>
 <h2></h2>
 <div id="text">
-	<p> I have started my coding journey with Ruby, HTML, CSS and more cool technologies to follow. <nbsp></nbsp>
-		Recently, I got my first taste of pair programming for making a ruby application which ran on terminal. 
-	</p>
+	<p> I have started my coding journey with Ruby, HTML and CSS, more cool technologies to follow. 
+
 	<div class="icon-container">
 		<div>
 			<a href="https://www.ruby-lang.org/en/" target="_blank"> 
 				<img class="skills-icon" src="..//img/ruby.ico"/>
-				<p class="icon-text">Ruby</p>
+				<p class="icon-text">RUBY</p>
 			</a>
 		</div>
 
@@ -26,4 +25,10 @@
 			</a>
 		</div>
 	</div>
+	<p>
+		Recently, I got my first taste of pair programming for making a Ruby application which ran on the terminal. 
+		<br> <br>
+		Find the project link here 
+		<a href="https://github.com/SeepG/Pizza_Mania" target="_blank"> Pizza Mania </a>
+	</p>
 </div>
