info change in readme and spelling in About

--- a/src/htmls/about.html
+++ b/src/htmls/about.html
@@ -12,9 +12,7 @@
 	<h3>About Me</h3>
 	<p>
 		<b>Q. What light’s you up?</b> <br>
-		Books which share new perspectives, interesting conversations with people on things they are passionate about and
-		counselling people to achieve their best during their phase.
-
+		Books which share new perspectives, good food and interesting conversations with people on things they are passionate about.
 		<br> <br>
 
 		<b>Q. What is the coolest thing you have accomplished? </b> <br>
